@@ -1,3 +1,8 @@
+2008-07-31  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderProject.cs: Fixed some
+	  issues.
+
 2008-07-29  Mike Krüger <mkrueger@novell.com> 
 
 	* MonoDevelop.GtkCore/WidgetFileDescriptionTemplate.cs,
